fix(core): fold a foreign key's row index up the whole chain
Review found three real defects in the first cut of ForeignKeyPlan.

**A composite key could land on two different parent rows.** Reducing each
column by the smallest row count in its chain is wrong when the counts are not
multiples of each other: with 6 tenants, 10 accounts and 50 documents, document
13 paired tenant 1 with account 3, which is not a row of accounts. The index is
now folded level by level instead — row i of a child reads row i % parentRows of
its parent, which reads (i % parentRows) % grandparentRows of the grandparent —
so every column of a key reduces through the same parent row. A level is bounded
by several tables only where a column references keys that do not imply one
another, and there the smallest wins; a key the governing one already reaches is
implied rather than an extra bound, and counting it would pull the index below
the row the governing key needs. Reproduced as a fill that fails, then fixed.

**A class mixing a generated key with an ordinary one produced values for
neither.** Marking only the referencing column as database-generated left it
counting 1..N while the ordinary key kept its random values. A class carries one
set of values by construction, so being database-generated is a property of the
class: every member counts.

**A key into another schema stopped being an error.** Skipping those while
building the plan made the documented IllegalArgumentException from
getAssociatedPrimaryKeyColumn a silent null. Both an unresolvable external
target and a missing local one are reported again, as DatabaseFiller does.

Also derives the plan once per fill in DatabaseFiller and passes it to each
TableFiller, rather than rebuilding the whole-database maps for every table and
every partition.

Data is unchanged wherever the row counts involved are equal, which folding and
taking a minimum agree on: the golden dump does not move.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.co