@@ -60,6 +60,9 @@ public class TableFiller implements Fillable {
     /** Pre-resolved constraint metadata, or null to read from the catalog at fill time. */
     private final Map<String, ColumnConstraint> constraints;
 
+    /** Pre-resolved foreign-key plan, or null to derive one from the metadata at fill time. */
+    private final ForeignKeyPlan foreignKeyPlan;
+
     /** True when this filler handles a sub-range (one partition) of the table rather than all rows. */
     private final boolean partitioned;
     private final long rangeStartInclusive;
@@ -84,6 +87,7 @@ public class TableFiller implements Fillable {
         this.table = Objects.requireNonNull(table, "table must not be null");
         this.commitStrategy = commitStrategy != null ? commitStrategy : databaseConfiguration.commitStrategy();
         this.constraints = null;
+        this.foreignKeyPlan = null;
         this.partitioned = false;
         this.rangeStartInclusive = 0;
         this.rangeEndExclusive = 0;
@@ -120,6 +124,10 @@ public class TableFiller implements Fillable {
         // 0 means "this column never reseeds"; a positive value is the parent row count past which
         // a foreign-key generator must wrap around to stay within the parent key space
         long[] maxInvocations = new long[columnCount];
+        // the row counts a foreign-key column's row index is reduced by, nearest parent first: row i of
+        // a child reads row i % parentRows of its parent, which reads (i % parentRows) % grandparentRows
+        // of the grandparent. Empty for a column that is not a foreign key (issue #617).
+        long[][] wrapModuli = new long[columnCount][];
         // the column's IndexedRandom when its generator is positionable (the engine repositions it
         // to the absolute row index before every row); null keeps the legacy sequential-draw path
         IndexedRandom[] positionables = new IndexedRandom[columnCount];
@@ -130,8 +138,10 @@ public class TableFiller implements Fillable {
         TableConfiguration tableConfiguration = databaseConfiguration.tableConfiguration(table.name());
 
         // how every foreign-key column lines up with the key it references: which seed it shares, how
-        // far it may run before wrapping, and whether the key is one the database assigns itself
-        ForeignKeyPlan foreignKeyPlan = ForeignKeyPlan.of(database);
+        // far it may run before wrapping, and whether the key is one the database assigns itself.
+        // Resolved from the whole database, so DatabaseFiller derives it once per fill and shares it;
+        // deriving one here is the fallback for a TableFiller built directly.
+        ForeignKeyPlan foreignKeyPlan = this.foreignKeyPlan != null ? this.foreignKeyPlan : ForeignKeyPlan.of(database);
 
         long baseSeed = databaseConfiguration.seed();
 
@@ -153,14 +163,25 @@ public class TableFiller implements Fillable {
             // key, in which case the whole linked class shares one seed and the values line up
             long seed = DatabaseUtils.columnSeed(foreignKeyPlan.seedSource(column), baseSeed);
 
-            // a foreign key can produce no more distinct values than the smallest key space it
-            // references has rows; beyond that the generator wraps and replays those same keys, so a
-            // child larger than a parent stays inside it however the parent was sized (issue #617)
-            long keySpace = 0;
-            for (String referencedTable : foreignKeyPlan.referencedTables(column)) {
-                long referencedRows = rowCount(referencedTable);
-                keySpace = keySpace == 0 ? referencedRows : Math.min(keySpace, referencedRows);
+            // a foreign key replays its parent's rows, so its row index is reduced by the parent's row
+            // count, then by the parent's own parent's, and so on up the chain. Folding in order is what
+            // keeps a composite key's columns on one parent row (issue #617).
+            List<List<String>> wrapChain = foreignKeyPlan.wrapChain(column);
+            long[] moduli = new long[wrapChain.size()];
+            for (int level = 0; level < moduli.length; level++) {
+                // several tables at one level means the value must be a key of each, so the smallest
+                // bounds it; one table is the ordinary case
+                long rows = Long.MAX_VALUE;
+                for (String levelTable : wrapChain.get(level)) {
+                    rows = Math.min(rows, rowCount(levelTable));
+                }
+                moduli[level] = rows;
             }
+            wrapModuli[idx] = moduli;
+
+            // the immediate parent's row count: the cycle length for the legacy reseed path, and the
+            // size of the key space a database-generated key is counted through
+            long keySpace = moduli.length == 0 ? 0 : moduli[0];
             maxInvocations[idx] = keySpace;
 
             // resolve the generator by precedence; the generator is always seeded by the engine
@@ -186,12 +207,16 @@ public class TableFiller implements Fillable {
                     dataGenerator = custom;
                     source = "registry";
                 } else if (foreignKeyPlan.databaseGenerated(column)) {
-                    // the key this references is assigned by the database (serial, IDENTITY), so it is
-                    // left out of its own insert and there is no seed to share with it. A table filled
-                    // from empty is assigned 1..N in insertion order, which counting reproduces exactly.
+                    // this column's class contains a key the database assigns (serial, IDENTITY), which
+                    // is left out of its own insert, so there is no seed for the class to share. A table
+                    // filled from empty is assigned 1..N in insertion order, which counting reproduces
+                    // exactly. A column that references a key counts through that key's space; one that
+                    // is only linked to the class counts through its own table, so it covers what the
+                    // others draw from.
+                    long counted = keySpace > 0 ? keySpace : rowCount(table.name());
                     dataGenerator = new SequentialIntegerGenerator.Builder(random)
                             .start(1)
-                            .end((int) Math.max(1, Math.min(keySpace, Integer.MAX_VALUE)))
+                            .end((int) Math.clamp(counted, 1, Integer.MAX_VALUE))
                             .build();
                     source = "generated-key";
                 } else {
@@ -291,9 +316,16 @@ public class TableFiller implements Fillable {
                     if (positioned != null) {
                         // position the random source at this row's absolute index so the value is a
                         // pure function of (columnSeed, rowIndex); a foreign-key column positions at
-                        // the parent's index instead (i mod parent rows), which both replays the
-                        // parent's exact value and makes wraparound a formula rather than a reseed
-                        positioned.position(maxInvocation > 0 ? i % maxInvocation : i);
+                        // the parent's index instead, reduced up the chain of parents, which both
+                        // replays the parent's exact value and makes wraparound a formula, not a reseed
+                        long[] moduli = wrapModuli[col];
+                        long index = i;
+                        for (long modulus : moduli) {
+                            if (modulus > 0) {
+                                index %= modulus;
+                            }
+                        }
+                        positioned.position(index);
                     } else if (maxInvocation > 0 && i != 0 && i % maxInvocation == 0) {
                         // legacy path (non-positionable generator): the foreign-key generator has
                         // exhausted the parent key space; reseed its random source so it replays the
@@ -460,6 +492,7 @@ public class TableFiller implements Fillable {
         private Table table;
         private CommitStrategy commitStrategy;
         private Map<String, ColumnConstraint> constraints;
+        private ForeignKeyPlan foreignKeyPlan;
         private boolean partitioned;
         private long rangeStartInclusive;
         private long rangeEndExclusive;
@@ -514,6 +547,22 @@ public class TableFiller implements Fillable {
          */
         public Builder constraints(Map<String, ColumnConstraint> constraints) {
             this.constraints = constraints;
+            return this;
+        }
+
+        /**
+         * Supplies a pre-resolved {@link ForeignKeyPlan} instead of deriving one at fill time.
+         *
+         * <p>The plan covers the whole database, so it is the same for every table and partition of a
+         * fill. {@link DatabaseFiller} derives it once and shares it; deriving one per filler would
+         * repeat the work for every table, and again for every partition of an intra-table fill.
+         *
+         * @param foreignKeyPlan the plan to use, or null to derive one from the metadata
+         * @return this builder, for chaining
+         * @since 3.10.0
+         */
+        public Builder foreignKeyPlan(ForeignKeyPlan foreignKeyPlan) {
+            this.foreignKeyPlan = foreignKeyPlan;
             return this;
         }
 
@@ -574,6 +623,7 @@ public class TableFiller implements Fillable {
         this.databaseConfiguration = builder.databaseConfiguration;
         this.commitStrategy = builder.commitStrategy != null ? builder.commitStrategy : builder.databaseConfiguration.commitStrategy();
         this.constraints = builder.constraints;
+        this.foreignKeyPlan = builder.foreignKeyPlan;
         this.partitioned = builder.partitioned;
         this.rangeStartInclusive = builder.rangeStartInclusive;
         this.rangeEndExclusive = builder.rangeEndExclusive;
